# indexer

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md
.env/: indexer.env
.github/workflows/: main.yaml
crates/common/: Cargo.toml
crates/common/src/: backoff.rs  broadcaster.rs  config.rs  context.rs  errors.rs  lib.rs  models.rs  mpsc.rs  runner.rs  shared.rs  utils.rs  worker.rs
crates/common/src/clients/: etcd.rs  mod.rs
crates/data-processing/: Cargo.toml
crates/etcd/: Cargo.toml
crates/etcd/src/: client.rs  lib.rs  metrics.rs  watcher.rs
crates/exchange/: Cargo.toml
crates/exchange/src/: config.rs  lib.rs
crates/exchange/src/binance/: callback.rs  mod.rs  models.rs  wsclient.rs
crates/exchange/src/coinbase/: callback.rs  mod.rs  models.rs  wsclient.rs
crates/exchange/src/kraken/: callback.rs  mod.rs  models.rs  wsclient.rs
crates/feed-processing/: Cargo.toml
crates/feed-processing/src/: lib.rs  worker.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: config.rs  dbwriter.rs  distribution.rs  main.rs  runner.rs  utils.rs
crates/indexer/src/processing/: mod.rs  smoothing.rs  weighted_average.rs
crates/wsclient/: Cargo.toml
crates/wsclient/src/: callback.rs  client.rs  consumer.rs  lib.rs  metrics.rs
docker/: .dev.env  docker-compose.yaml
docker/etcd-init/: init.sh
docker/grafana/provisioning/dashboards/: dashboard.yml  indexer.json
docker/indexer/: Dockerfile
docker/mockserver/: jsonrpc.json
docker/prometheus/: prometheus.yml
docker/sql/: init.sh
