
[workspace]
members = [
    "crates/*"
]
resolver = "2"

[workspace.dependencies]
common = { path = "./crates/common" }
exchange = { path = "./crates/exchange" }
etcd = { path = "./crates/etcd" }
wsclient = { path = "./crates/wsclient" }
feed-processing = { path = "./crates/feed-processing" }

## Async Dependencies
async-trait = { version = "0.1.86" }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tokio = { version = "1.39.0", features = ["full"] }
futures-util = { version = "0.3.31" }
futures = { version = "0.3.31" }
etcd-client = { version = "0.14.1" }
reqwest = { version = "0.12.12", features = ["json"] }

## Miscellaneous
jiff = { version = "0.2.0" }
thiserror = { version = "2.0.11" }
dotenvy = { version = "0.15.7" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rust_decimal = { version = "1.36.0" }
rust_decimal_macros = { version = "1.36.0" }
log = { version = "0.4.25" }
config = { version = "0.15.8" }
lazy_static = { version = "1.5.0" }
prometheus = { version = "0.13.4" }

## Serialization Dependencies
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
