[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
jiff = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
etcd-client = { workspace = true , features = ["pub-response-field"]}
