[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
feed-processing = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
exchange = { workspace = true }
config = { workspace = true }
tokio = { workspace = true }
etcd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jiff = { workspace = true }
rust_decimal = { workspace = true, features = ["serde-with-str"] }

[dev-dependencies]
rust_decimal_macros = { workspace = true }
